# CppDesignPatterns

./: .gitignore  CMakeLists.txt  README.md
AbstractFactory/: CMakeLists.txt  Factory.cpp  Factory.hpp  Item.cpp  Item.hpp  Link.cpp  Link.hpp  ListFactory.cpp  ListFactory.hpp  ListLink.cpp  ListLink.hpp  ListPage.cpp  ListPage.hpp  Page.cpp  Page.hpp  main.cpp
Adapter_Inheritance/: Adaptee.cpp  Adaptee.hpp  Adapter.cpp  Adapter.hpp  CMakeLists.txt  Target.hpp  main.cpp
Adapter_Instance/: Adaptee.cpp  Adaptee.hpp  Adapter.cpp  Adapter.hpp  CMakeLists.txt  Target.hpp
Bridge/: CMakeLists.txt  CountDisplay.cpp  CountDisplay.hpp  Display.cpp  Display.hpp  DisplayImpl.hpp  StringDisplayImpl.cpp  StringDisplayImpl.hpp  main.cpp
Builder/: Builder.hpp  CMakeLists.txt  Director.cpp  Director.hpp  MarkdownBuilder.cpp  MarkdownBuilder.hpp  TextBuilder.cpp  TextBuilder.hpp  main.cpp
Factory/: CMakeLists.txt  ConcreteCreator.cpp  ConcreteCreator.hpp  ConcreteProduct.cpp  ConcreteProduct.hpp  Creator.cpp  Creator.hpp  Product.hpp  main.cpp
Iterator/: Aggregate.hpp  CMakeLists.txt  Iterator.hpp  Object.cpp  Object.hpp  ObjectContainer.cpp  ObjectContainer.hpp  ObjectIterator.cpp  ObjectIterator.hpp  main.cpp  sp.hpp
Prototype/: CMakeLists.txt  Manager.cpp  Manager.hpp  MessageBox.cpp  MessageBox.hpp  Product.hpp  UnderlinePen.cpp  UnderlinePen.hpp  main.cpp
Singleton/: CMakeLists.txt  Singleton.cpp  Singleton.hpp  main.cpp
Strategy/: CMakeLists.txt  Dice.cpp  Dice.hpp  Player.cpp  Player.hpp  RandomStrategy.cpp  RandomStrategy.hpp  Strategy.hpp  WinningStrategy.cpp  (+2 more)
(+6 files in other folders)
